tests/snapshots/basics__json-DashMapDB Single Storage written.snap
---
source: tests/basics.rs
expression: "db.try_read_storage::<TestRecord>(&db_file_path)?"
---
TestRecord {
    id: 1,
    data: "Modified the data",
}
