tests/snapshots/basics__json-DiskDB Single Storage reinitialized.snap
---
source: tests/basics.rs
expression: "db.try_read_storage::<TestRecord>(db_file_path)?"
---
TestRecord {
    id: 1,
    data: "Modified the data",
}
