tests/snapshots/basics__json-MemoryDB Single Storage backup.snap
---
source: tests/basics.rs
expression: "db.try_read_storage::<TestRecord>(backup_path)?"
---
TestRecord {
    id: 1,
    data: "Modified the data",
}
