tests/snapshots/basics__json-MemoryDB Storage backup.snap
---
source: tests/basics.rs
expression: "db.try_read_storage::<Vec<TestRecord>>(backup_path)?"
---
[
    TestRecord {
        id: 1,
        data: "My data of 1",
    },
    TestRecord {
        id: 2,
        data: "My data of 2",
    },
]
