tests/snapshots/basics__json-MemoryDB updated all.snap
---
source: tests/basics.rs
expression: "db.get_all::<TestRecordPartitioned>()?"
---
[
    TestRecordPartitioned {
        id: 1,
        data: "My data of 1",
    },
    TestRecordPartitioned {
        id: 2,
        data: "My data of 2",
    },
    TestRecordPartitioned {
        id: 3,
        data: "My data of 3",
    },
    TestRecordPartitioned {
        id: 4,
        data: "Data has been updated!",
    },
    TestRecordPartitioned {
        id: 5,
        data: "Data 1 has been updated!",
    },
    TestRecordPartitioned {
        id: 6,
        data: "Data 2 has been updated!",
    },
    TestRecordPartitioned {
        id: 7,
        data: "Data 3 has been updated!",
    },
]
