tests/snapshots/basics__postcard-DiskDB Single Storage should contain the record.snap
---
source: tests/basics.rs
expression: "db.try_read_storage::<TestRecord>(&db_file_path)?"
---
TestRecord {
    id: 1,
    data: "My data of 1",
}
